# graph_navigation

./: .buildconfig  .gitignore  .gitmodules  .travis.yml  01_25_2023_command.txt  02_24_23_command.txt  2023-02-22-18-08-13.bag  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  automata_navigation_remapped.sh  calculate_curvature_scaling.py  cmake_install.cmake  command.txt  convmodel.pt  curve_params_command.txt  demo_command.txt  eer.py  eerlawn1.pt  first_gdc_track_model.pt  hq.py  jit_cost_model_outdoor_6dim.pt  laptimes.txt  make_costmap.py  manifest.xml  mark.py  recorder.py  run_cobot.sh  run_navigation_ut_automata.bash  satnav_demo.py  saved_convmodel.pt  setup_nav_env.sh  sl.py  spoof_goal.py  spoof_goal2.py  spot_navigation.sh  test.cc  test.txt  (+3 more)
.github/workflows/: buildTest.yml
amrl_shared_lib/: .gitrepo
atomic_configure/: _setup_util.py  local_setup.sh  setup.sh
catkin_generated/: generate_cached_setup.py  setup_cached.sh
catkin_generated/installspace/: _setup_util.py
config/: automata_snupi.lua  autonomy_arbiter.lua  camera_calibration.yaml  camera_calibration_kinect.yaml  cobot.lua  gym_nav.lua  navigation.lua  navigation_eerdemo.lua  navigation_jackal_classifier.lua  navigation_jackal_eerdemo.lua  navigation_jackal_icl.lua  navigation_jackal_indoor_prefer_turf.lua  navigation_jackal_sterling.lua  navigation_sim.lua  navigation_spot_ganav.lua  navigation_spot_geometric.lua  navigation_spot_icl.lua  navigation_spot_indoor_prefer_turf.lua  navigation_spot_naturl.lua  navigation_spot_naturl_grass_eq.lua  navigation_spot_oracle.lua  navigation_spot_outdoor6t.lua  navigation_spot_patern.lua  navigation_spot_rca.lua  navigation_spot_ser.lua  particle_filter.lua  simulator.lua  ut_automata.lua  ut_jackal.lua
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ikd_training_bag/: 2023-03-23-10-44-04.bag  record_script.sh
ikd_training_bag/2023-03-23-10-44-04/: _slash_joystick.csv  _slash_odom.csv  _slash_vectornav_slash_IMU.csv  _slash_vesc_drive.csv
making_maps/: README.md
making_maps/cartographer_files/configuration_files/: ut_automata.lua
making_maps/cartographer_files/launch/: ut_automata_bagfile.launch  ut_automata_online.launch
making_maps/cartographer_files/urdf/: ut_automata.urdf
maps/: gdc_lab_map_5_15.vectormap.json  gdc_lab_track_05_15.vectormap.json  icra_2022_track.vectormap.json  icra_2022_track.vectormap.txt  icra_2022_track_2.txt  icra_2022_track_2.vectormap.json
maps/gdc_lab_track_05_15/: gdc_lab_track_05_15.navigation.json  gdc_lab_track_05_15.vectormap.txt
models/: ackermann_imu_encoder_tol0.2_vel2.0_lwr0.0.pt  ackermann_no_imu_tol0.2_vel2.0_lwr0.0.pt  after_final_experiments_model.pt  final_experiments_model.pt  traced_offroad_model_backyard_joystick_only.pt
msg/: IntrospectivePerceptionInfo.msg  IntrospectivePerceptionInfoArray.msg  IntrospectivePerceptionRawInfo.msg  socialNavReq.msg  socialNavResetReq.msg  socialNavResetResp.msg  socialNavResp.msg
scripts/: AHG_2.json  AHG_dock.json  AHG_gym.json  graph_nav_rl_export.h  manifest.xml  pp_nav_components.py  pp_nav_components_live.py  pub_goal.sh  run_navigation_ut_automata_track.bash  safe_location_from_image.py  test_rl_sim.py  test_ut_automata_gym.py  tour_trajectory.py  ut_automata_gym_env.py  waypoint_nav.py  waypoint_navigation.py
scripts/legacy/: AHG_courtyard.json  manifest.xml
src/: CMakeLists.txt
src/autonomy_arbiter/: autonomy_arbiter.cc
src/config_reader/: .gitrepo  InstallPackages  config_reader.h
src/graph_navigation/srv/: __init__.py  _graphNavSrv.py  _socialNavSrv.py
src/libtorch/: build-hash  build-version
src/libtorch/include/ATen/: CPUFunctions_inl.h  CUDAFunctions_inl.h  CompositeExplicitAutogradFunctions_inl.h  CompositeImplicitAutogradFunctions_inl.h  Config.h  Functions.h  MetaFunctions_inl.h  NativeFunctions.h  NativeMetaFunctions.h  Operators.h  RedispatchFunctions.h  RegistrationDeclarations.h
src/libtorch/include/caffe2/core/: macros.h
src/libtorch/include/torch/csrc/api/include/torch/: version.h
src/libtorch/share/cmake/Caffe2/: Caffe2Config.cmake  Caffe2ConfigVersion.cmake  Caffe2Targets.cmake
src/libtorch/share/cmake/Gloo/: GlooTargets.cmake
src/libtorch/share/cmake/Tensorpipe/: TensorpipeTargets.cmake
src/libtorch/share/cmake/Torch/: TorchConfig.cmake
src/navigation/: .gitignore  IRL_script.pt  ackermann_domain.h  ackermann_motion_primitives.cc  ackermann_motion_primitives.h  astar.h  constant_curvature_arcs.cc  constant_curvature_arcs.h  contingency.cc  deep_cost_evaluator.cc  deep_cost_evaluator.h  deep_cost_map_evaluator.cc  deep_cost_map_evaluator.h  deep_cost_model.h  deep_irl_evaluator.cc  deep_irl_evaluator.h  eight_connected_domain.h  eight_connected_pref_domain.h  graph_domain.h  graph_nav_rl.cc  graph_nav_rl.h  image_based_evaluator.cc  image_based_evaluator.h  image_tiler.cc  image_tiler.h  introspection.cc  introspection.h  linear_evaluator.cc  linear_evaluator.h  load_model_test.cc  motion_primitives.cc  motion_primitives.h  navigation.cc  navigation.h  navigation_main.cc  navigation_parameters.h  navigation_tests.cc  path_preference_evaluator.cc  path_preference_evaluator.h  racing_line.h  (+14 more)
src/pointcloud_to_laserscan/: pointcloud_to_laserscan_main.cc
src/shared/: .gitrepo  .travis.yml  CMakeLists.txt  README.md
src/shared/math/: line2d.h  math_util.h
src/shared/tests/math/: line2d_tests.cc
src/shared/util/: helpers.h  random.h  serialization.cc  timer.cc
src/simulator/: simulator.cc  simulator.h
src/vector_map/: vector_map.cc  vector_map.h
src/visualization/: gui_helpers.h  visualization.cc  visualization.h
srv/: MDPSolver.srv  SaveTraversalStats.srv  TurnInPlace.srv  graphNavSrv.srv  socialNavReset.srv  socialNavSrv.srv
